update blockchain network metadata
