# onchain-handler/internal/domain/network_metadata.go
@@ -8,7 +8,8 @@ import (
 
 type NetworkMetadata struct {
 	ID         uint64    `json:"id" gorm:"primaryKey;autoIncrement"`
-	Network    string    `json:"network"`
+	Alias      string    `json:"alias"`
+	Name       string    `json:"name"`
 	IconBase64 string    `json:"icon_base64"`
 	CreatedAt  time.Time `json:"created_at"`
 	UpdatedAt  time.Time `json:"updated_at"`
@@ -21,7 +22,8 @@ func (m *NetworkMetadata) TableName() string {
 func (m *NetworkMetadata) ToDto() dto.NetworkMetadataDTO {
 	return dto.NetworkMetadataDTO{
 		ID:         m.ID,
-		Code:       m.Network,
+		Alias:      m.Alias,
+		Name:       m.Name,
 		IconBase64: m.IconBase64,
 	}
 }
