# onchain-handler/internal/dto/network_metadata.go
@@ -2,6 +2,7 @@ package dto
 
 type NetworkMetadataDTO struct {
 	ID         uint64 `json:"id"`
-	Code       string `json:"code"`
+	Alias      string `json:"alias"`
+	Name       string `json:"name"`
 	IconBase64 string `json:"icon_base64"`
 }
